--- a/app/views/users/_form.erb
+++ b/app/views/users/_form.erb
@@ -5,8 +5,8 @@
 </p>
 
 <p>
-  <%= f.label :address %>:
-  <%= f.text_field :address %>
+  <%= f.label :street %>:
+  <%= f.text_field :street %>
 </p>
 
 <p>
