Change user address attribute to street attribute in multiple views and tests

--- a/app/views/dashboard/dashboard/index.html.erb
+++ b/app/views/dashboard/dashboard/index.html.erb
@@ -5,7 +5,7 @@
     <h5 class="card-title"><%= @merchant.name %></h5>
     <p>Role: <%= @merchant.role %></p>
     <p>Email: <%= @merchant.email %></p>
-    <p>Address: <%= @merchant.address %></p>
+    <p>Street: <%= @merchant.street %></p>
     <p>City: <%= @merchant.city %></p>
     <p>State: <%= @merchant.state %></p>
     <p>Zip: <%= @merchant.zip %></p>
