Add address data to it's own section in the user profile and remove address info from user data section

--- a/app/views/users/_profile.erb
+++ b/app/views/users/_profile.erb
@@ -1,19 +1,26 @@
-<h1>Profile Page for <%= @user.name %></h1>
+<h1>Profile Page for <%= @user.name %></h1><br>
 
 <section id="profile-data">
-  <h2>Order Data</h2>
+  <h2>User Data</h2>
   <p>Email: <%= @user.email %></p>
   <p>Role: <%= @user.role %></p>
-  <aside id="address-details">
-    <h3>Address:</h3>
-    <p><%= @user.address %></p>
-    <p>
-      <%= @user.city %>,
-      <%= @user.state %>
-      <%= @user.zip %>
-    </p>
-  </aside>
   <p><%= link_to 'Edit Profile Data', edit_profile_path unless current_admin? %></p>
+</section>
+
+<section id="address-data">
+  <h2>Your Addresses</h2>
+  <% @user_addresses.each do |address| %>
+    <div id="address-details-<%= address.id %>">
+      <p><%= address.name %></p>
+      <p><%= address.street %><br>
+      <%= address.city %>,
+      <%= address.state %>
+      <%= address.zip %><br>
+      <%= link_to "Edit", edit_profile_address_path(address) %> |
+      <%= link_to "Delete", profile_remove_address_path(address), method: :delete %><p>
+    </div>
+  <% end %>
+  <p><%= link_to "Add New Address", new_profile_address_path unless current_admin? %></p>
 </section>
 
 <section id="orders-data">
