--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,27 @@
 <h1>Edit Profile Data</h1>
 
-<%= render partial: 'form', locals: {form_submit_path: edit_profile_path} %>
+<%= form_for @user, url: edit_profile_path do |f| %>
+<p>
+  <%= f.label :name %>:
+  <%= f.text_field :name %>
+</p>
+
+<p>
+  <%= f.label :email %>:
+  <%= f.text_field :email %>
+</p>
+
+<p>
+  <%= f.label :password %>:
+  <%= f.password_field :password %>
+</p>
+
+<p>
+  <%= f.label :password_confirmation %>:
+  <%= f.password_field :password_confirmation %>
+</p>
+
+<p>
+  <%= f.submit "Submit" %>
+</p>
+<% end %>
