Add new order_address info to order show page

--- a/app/views/dashboard/orders/show.html.erb
+++ b/app/views/dashboard/orders/show.html.erb
@@ -1,8 +1,8 @@
 <%= tag.div id: "order-#{@order.id}" do %>
   <p>Customer Name: <%= @user.name %></p>
-  <p>Customer Address:</p>
-  <p><%= @user.street %></p>
-  <p><%= @user.city %>, <%= @user.state %> <%= @user.zip %></p>
+  <p>Shipping Address:</p>
+  <p><%= @order_address.street %><br>
+  <%= @order_address.city %>, <%= @order_address.state %> <%= @order_address.zip %></p>
 
   <p>Order Status: <%= @order.status %></p>
 
