--- a/app/views/profile/orders/show.html.erb
+++ b/app/views/profile/orders/show.html.erb
@@ -3,6 +3,12 @@
   <p>Created: <%= @order.created_at %></p>
   <p>Last Update: <%= @order.updated_at %></p>
   <p>Status: <%= @order.status %></p>
+  <div id="shipping-address">
+    <p>Shipping Address:<br>
+    <%= @order_address.street %><br>
+    <%= @order_address.city %>, <%= @order_address.state %> <%= @order_address.zip %><br>
+    <%= link_to "Change Shipping Address", profile_update_order_address_path(@order) %></p>
+  </div>
   <p>Item Count: <%= @order.total_item_count %></p>
   <p>Total Cost: <%= number_to_currency(@order.total_cost) %></p>
 
