--- a/app/views/dashboard/dashboard/index.html.erb
+++ b/app/views/dashboard/dashboard/index.html.erb
@@ -106,3 +106,20 @@
     </tbody>
   </table>
 <% end %>
+
+<h2>Merchant To-Do List:</h2>
+<br>
+<h4>Items that need pictures:</h4>
+<% if @items_with_placeholder_image != nil %>
+  <% @items_with_placeholder_image.each do |item| %>
+    <div id="placeholder-image-item-<%= item.id %>">
+      <%= link_to "#{item.name}", edit_dashboard_item_path(item.id) %>
+    <div>
+  <% end %>
+<% end %>
+<br>
+<h4>Unfulfilled Orders:</h4>
+  <div id="unfulfilled-order-stats">
+    You have <%= @unfulfilled_orders_count %> unfulfilled orders worth $<%= @unfulfilled_orders_revenue %>
+  </div>
+<br>
