--- a/app/views/dashboard/dashboard/index.html.erb
+++ b/app/views/dashboard/dashboard/index.html.erb
@@ -99,7 +99,8 @@
           <%= order.id %>
           <% end %></td>
           <td><%= order.created_at %></td>
-          <td><%= order.total_quantity_for_merchant(@merchant.id) %></td>
+          <td><%= order.total_quantity_for_merchant(@merchant.id) %>
+            <%= "!Order items quantity exceed inventory!" if order.item_quantity_greater_than_inventory %></td>
           <td><%= order.total_price_for_merchant(@merchant.id) %></td>
         </tr>
       <% end %>
